src/snapshots/aidl_parser__ast__tests__file.snap
---
source: src/ast.rs
expression: "rules::file(input, &lookup(input))?"

---
Some(File(
  package: Package(
    name: "x.y.z",
    symbol_range: "...",
  ),
  imports: [
    Import(
      name: "a.b.c",
      symbol_range: "...",
    ),
  ],
  item: Interface(Interface(
    name: "MyInterface",
    elements: [],
    annotations: [],
    doc: None,
    full_range: "...",
    symbol_range: "...",
  )),
))
