src/snapshots/aidl_parser__ast__tests__import.snap
---
source: src/ast.rs
expression: "rules::import(input, &lookup(input))?"

---
Import(
  name: "x.y.z",
  symbol_range: Range(
    start: Position(
      offset: 7,
      line_col: (1, 8),
    ),
    end: Position(
      offset: 11,
      line_col: (1, 12),
    ),
  ),
)
