src/snapshots/aidl_parser__ast__tests__interface_fallback.snap
---
source: src/ast.rs
expression: "rules::interface(input, &lookup(input))?"

---
Interface(
  name: "Potato",
  elements: [
    Method(Method(
      oneway: false,
      name: "method1",
      return_type: Type(
        name: "String",
        kind: String,
        generic_types: [],
        definition: None,
        symbol_range: "...",
      ),
      args: [],
      annotations: [],
      doc: None,
      symbol_range: "...",
      full_range: "...",
    )),
    Method(Method(
      oneway: false,
      name: "method2",
      return_type: Type(
        name: "int",
        kind: Primitive,
        generic_types: [],
        definition: None,
        symbol_range: "...",
      ),
      args: [],
      annotations: [],
      doc: None,
      symbol_range: "...",
      full_range: "...",
    )),
  ],
  annotations: [],
  doc: None,
  full_range: "...",
  symbol_range: "...",
)
