src/snapshots/aidl_parser__ast__tests__interface_with_annotation.snap
---
source: src/ast.rs
expression: "rules::interface(input, &lookup(input))?"

---
Interface(Interface(
  name: "Potato",
  elements: [],
  annotations: [
    Annotation(
      key_values: {},
    ),
    Annotation(
      key_values: {},
    ),
  ],
  doc: None,
  full_range: "...",
  symbol_range: "...",
))
