src/snapshots/aidl_parser__ast__tests__member.snap
---
source: src/ast.rs
expression: "rules::member(input, &lookup(input))?"

---
Member(
  name: "memberName",
  member_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: Range(
      start: Position(
        offset: 0,
        line_col: (1, 1),
      ),
      end: Position(
        offset: 8,
        line_col: (1, 9),
      ),
    ),
  ),
  symbol_range: Range(
    start: Position(
      offset: 9,
      line_col: (1, 10),
    ),
    end: Position(
      offset: 19,
      line_col: (1, 20),
    ),
  ),
  full_range: Range(
    start: Position(
      offset: 0,
      line_col: (1, 1),
    ),
    end: Position(
      offset: 21,
      line_col: (1, 22),
    ),
  ),
)
