src/snapshots/aidl_parser__ast__tests__member_with_javadoc.snap
---
source: src/ast.rs
expression: "rules::member(input, &lookup(input))?"

---
Member(
  name: "memberName",
  member_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  symbol_range: "...",
  doc: Some("Member docu"),
  full_range: "...",
)
